paid/force-app/main/default/objects/PAID_Invoice_Field_Mapping__mdt/PAID_Invoice_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>PAID Invoice Field Mapping</label>
    <pluralLabel>PAID Invoice Field Mappings</pluralLabel>
</CustomObject>