paid/force-app/main/default/objects/PAID_Invoice_Field_Mapping__mdt/fields/PAID_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>PAID_Field_Name__c</fullName>
    <description>The field name in PAID API payload (e.g., firstName, emailAddress)</description>
    <label>PAID Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>