paid/force-app/main/default/objects/PAID_Invoice_Field_Mapping__mdt/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <description>The Salesforce object API name (e.g., Contact)</description>
    <label>Salesforce Object</label>
    <length>100</length>
    <type>Text</type>
</CustomField>