paid/force-app/main/default/objects/PAID_Invoice_Field_Mapping__mdt/fields/Transformation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Transformation_Rule__c</fullName>
    <description>Transformation to apply to field value before sending to PAID</description>
    <inlineHelpText>Select transformation to apply (None for no transformation)</inlineHelpText>
    <label>Transformation Rule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Uppercase</fullName>
            </value>
            <value>
                <fullName>Lowercase</fullName>
            </value>
            <value>
                <fullName>Trim</fullName>
            </value>
            <value>
                <fullName>Format_Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>